<resources>

    <string name="app_name">iFOX</string>
    <string name="title_text">iFOX工作室</string>
    
    <!-- 其他区域文字 -->
    <string name="news_textview">新闻</string>
    <string name="download_textview">作品</string>
    <string name="other_textview">其他</string>
    <string name="login">联系人</string>
    <string name="register">注册</string>
    <string name="about">关于</string>
    <string name="update">检查更新</string>
    <string name="updatelog">更新日志</string>
    <string name="cancel">发现</string>
    <string name="news_detail">新闻</string>
    <string name="other_login_title">登录通行证</string>
    <string name="hint_username">请输入帐号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint">SSL安全登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="android">Android项目</string>
    <string name="web">Web项目</string>
    
    <string name="register_username">用户名 &#160;&#160;</string>
    <string name="register_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="register_ipassword">确认密码</string>
    <string name="register_name">姓&#160;&#160;&#160;&#160; 名</string>
    <string name="register_school">学&#160;&#160;&#160;&#160;校</string>
    <string name="register_phonenumber">电话号码</string>
    <string name="register_acm_id">acm_id&#160;&#160;</string>
    <string name="register_email">电子邮箱</string>
    <string name="register_indentify">验证码&#160;&#160;</string>
    <string name="reg_cancel">取消</string>
     <string name="register_titile">注册信息</string>
    
    <string name="title1">快购电子商城</string>
    <string name="title2">企业门户网站</string>
    <string name="title3">ifox工作室</string>
    <string name="title4">添财app</string>
    <string name="title5">快购电子商城</string>
	
    <string name="app1">酒店预订系统</string>
    <string name="app2">添财APP</string>
    <string name="app3">快停APP</string>
    
    <string name="web1">快购电子商城</string>
    <string name="web2">企业门户网站</string>
    <string name="web3">iFOX工作室主页</string>
    
    <string name="download_button">资料下载！</string>
    
    <!-- 更新弹出框 -->
    <string name="soft_update_no">无需更新！</string>
    <string name="soft_update_title">软件更新</string>
	<string name="soft_update_info">即将更新 ...</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">稍后更新</string>
    <!-- 下载弹出框 -->
    <string name="soft_updating">正在下载</string>
    <string name="soft_update_cancel">取消下载</string>
    
    <string name="unconnected">网络连接失败，请设置你的网络！</string>
    
</resources>
