<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/other_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" 
        style="@style/other_list" >
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/login" />
         
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_to" />
                
    </LinearLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/ic_line" />
    
   <!-- 关于 -->
     
    <LinearLayout
        android:id="@+id/other_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_vertical" 
        style="@style/other_list" >
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/about" />
         
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_to" />
                
    </LinearLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/ic_line" />
    
   <!-- 版本 -->
    
    <LinearLayout
        android:id="@+id/other_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" 
        style="@style/other_list" >
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/update" />
         
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_to" />        
    </LinearLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/ic_line" />
  	
    <LinearLayout
        android:id="@+id/other_updatelog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" 
        style="@style/other_list" >
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/updatelog" />
         
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_to" />        
    </LinearLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/ic_line" />

</LinearLayout>
