<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent" 
    android:background="#dacfcb">
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:background="@drawable/mainbg" >
		<ImageView
		          android:layout_width="wrap_content"
		          android:layout_height="wrap_content"
		          android:background="@drawable/back_news_text"
		          android:onClick="back" />
  	    <TextView
              android:id="@+id/no"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:layout_weight="1"
              android:text="@string/android"
              android:textColor="#fff"
              android:textSize="20dip" />
  	</LinearLayout>
    <ScrollView 
		android:id="@+id/myscroll2"	
		android:layout_width="fill_parent"	
		android:layout_height="fill_parent">
		<LinearLayout 
			android:id="@+id/mylinear2"	
			android:orientation="vertical" 	
			android:layout_width="fill_parent"	
			android:layout_height="fill_parent">
			<TextView 
			    android:layout_width="match_parent"
			    android:layout_height="3dip"/>
		    	<LinearLayout 
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="horizontal">
		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android1"/>
		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android2"/>
		    	</LinearLayout>
		    	<LinearLayout 
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="horizontal">

		    		<ImageView
		    		    android:layout_width="wrap_content"
		    		    android:layout_height="wrap_content"
		    		    android:layout_weight="1"
		    		    android:padding="2dip"
		    		    android:src="@drawable/android3" />

		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android4"/>
		    	</LinearLayout>
		    	
		    <TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/app2"
			    android:gravity="center_horizontal"
			    android:textSize="20dip"
			    android:padding="10dip"/>
		    <View  
		       	android:layout_width="fill_parent"  
		       	android:layout_height="1px"
		       	android:background="?android:attr/listDivider"/>
		    	<LinearLayout 
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="horizontal">
		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android5"/>
		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android6"/>
		    	</LinearLayout>
		    	<LinearLayout 
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="horizontal">
		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android7"/>
		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android8"/>
		    	</LinearLayout>
		    <TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/app3"
			    android:gravity="center_horizontal"
			    android:textSize="20dip"
			    android:padding="10dip"/>   
		    <View  
		       	android:layout_width="fill_parent"  
		       	android:layout_height="1px"
		       	android:background="?android:attr/listDivider"/>
		    	<LinearLayout 
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="horizontal">
		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android9"/>
		    	    <ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_weight="1"
		    	        android:padding="2dip"
		    	        android:src="@drawable/android10"/>
		    	</LinearLayout>
	    	    <ImageView 
	    	        android:layout_width="fill_parent"
	    	        android:layout_height="wrap_content"
	    	        android:padding="6dip"
	    	        android:scaleType="fitXY"
	    	        android:layout_gravity="center"
	    	        android:src="@drawable/android11"/>
		    <TextView 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/app1"
			    android:textSize="20dip"
			    android:gravity="center_horizontal"
			    android:padding="10dip"/>
		</LinearLayout>
	</ScrollView>
    
    
    </LinearLayout>